# redis-simple

./: CHANGELOG.md  README.md  flake.nix  redis-simple.cabal
.github/workflows/: ci.yaml
app/: Main.hs
benchmark/: Bench.hs
patch/: hedis_juspay_cluster.patch
src/Database/: Redis.hs
src/Database/Redis/: Connection.hs  HashSlot.hs  Protocol.hs  Types.hs
