cabal-version:      3.0
name:               redis-simple
version:            0.1.0.0
author:             shivaraj-bh
maintainer:         sbh69840@gmail.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Database.Redis
  other-modules:
    , Database.Redis.Connection
    , Database.Redis.Protocol
    , Database.Redis.HashSlot
    , Database.Redis.Types
  build-depends:
    , base
    , bytestring
    , network
    , network-uri
    , resource-pool
    , deepseq
    , scanner
    , text
    , bytestring-lexing
    , unordered-containers

  ghc-options: -Wall
  hs-source-dirs:   src
  default-language: Haskell2010

executable redis-batching-bench
  main-is:          Main.hs
  build-depends:
    , async
    , base
    , bytestring
    , redis-simple
    , resource-pool
    , stm
    , time
    , random
    , split

  hs-source-dirs:   app
  ghc-options:      -Wall -O2 -rtsopts
  default-language: Haskell2010

benchmark redis-simple-benchmark
  main-is: benchmark/Bench.hs
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , hedis
    , time
    , redis-simple
    , bytestring
    , split
    , random
  mixins:
    , redis-simple (Database.Redis as Redis_simple.Database.Redis)
    , hedis (Database.Redis as Hedis.Database.Redis)
  ghc-options: -O2 -Wall -rtsopts
  default-language: Haskell2010
